refactor: PathFindResult 제거하고 Path 사용하도록 수정